<resources>
    <string name="app_name">Lab4A</string>
    <string name="action_settings">Settings</string>
    <string name="welcome_to_the_convenient_calculator_app_which_calculator_would_you_like_to_use">Welcome to the Convenient Calculator/Converter App! Which calculator would you like to use?</string>
    <string name="tip_calculator">Tip Calculator</string>
    <string name="miles_to_kilometers_calculator">Miles to Kilometers Converter</string>
    <string name="fahrenheit_to_celsius_calculator">Fahrenheit to Celsius Converter</string>
    <string name="title_activity_tip_calculator">TipCalculatorActivity</string>
    <string name="title_activity_miles_to_kilometers_converter">MilesToKilometersConverterActivity
    </string>
    <string name="title_activity_fahrenheit_to_celsius_converter">
        FahrenheitToCelsiusConverterActivity
    </string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="celsius">Celsius</string>
    <string name="convert">Convert</string>
    <string name="total_bill">Total Bill</string>
    <string name="tip_percentage">Tip Percentage</string>
    <string name="number_of_people">Number Of People</string>
    <string name="calculate">Calculate</string>
    <string name="miles">Miles</string>
    <string name="kilometers">Kilometers</string>
</resources>
