<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".TipCalculatorActivity"
    tools:showIn="@layout/activity_tip_calculator">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/totalBill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="130dp"
            android:layout_marginTop="100dp"
            android:text="@string/total_bill"
            android:textSize="18sp"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/inputBill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="65dp"
            android:ems="10"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            tools:layout_editor_absoluteY="72dp" />

        <TextView
            android:id="@+id/tipPercentage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="110dp"
            android:paddingTop="8dp"
            android:text="@string/tip_percentage"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="172dp"
            tools:layout_editor_absoluteY="179dp" />

        <EditText
            android:id="@+id/inputTipPercentage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="65dp"
            android:layout_marginEnd="4dp"
            android:ems="10"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            tools:layout_editor_absoluteY="133dp" />

        <TextView
            android:id="@+id/numOfPeople"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:paddingTop="8dp"
            android:text="@string/number_of_people"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="172dp"
            tools:layout_editor_absoluteY="179dp" />

        <EditText
            android:id="@+id/inputNumOfPeople"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="65dp"
            android:layout_marginEnd="4dp"
            android:ems="10"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            tools:layout_editor_absoluteY="133dp" />

        <Button
            android:id="@+id/calculateBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="125sp"
            android:layout_marginTop="20dp"
            android:onClick="onClick"
            android:text="@string/calculate"
            tools:layout_editor_absoluteX="44dp"
            tools:layout_editor_absoluteY="131dp" />

        <TextView
            android:id="@+id/result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="145sp"
            android:paddingTop="20dp"
            android:text="Result"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="172dp"
            tools:layout_editor_absoluteY="179dp" />

        <EditText
            android:id="@+id/outputResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="65dp"
            android:layout_marginEnd="4dp"
            android:ems="10"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            tools:layout_editor_absoluteY="133dp" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>